--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,46 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html, body {
+  margin: 0;
+  max-width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: transparent;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.dictionary {
+  background-attachment: fixed;
+  background-image: url('../public/background_board_compress.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  padding: 0 0 10px 0;
+  height: 'auto';
+}
+
+.dictionary .MuiGrid-spacing-xs-3 {
+  width: calc(100% - 16px);
+  margin: 0px 8px;
+}
+
+.MathJax {
+  text-align: left!important;
+}
+
+.infinite-scroll-component .MuiTableCell-root, .infinite-scroll-component__outerdiv .MuiTableCell-root {
+  width: 50%;
 }
